2007-05-07  Richard Hult  <richard@imendio.com>

	* configure.in: Make --disable-docs actually work, OKed by Johan.

2007-05-03  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_actiongroup.py,
	* tests/test_gdk.py: Fix unit tests to account for the new memory
	management model in pygobject 2.13.

2007-05-01  Andrew Cowie  <andrew@operationaldynamics.com>

	* gtk/gdk-base.defs: Fix return type of GdkRectangle.union

2007-02-23  Mariano Suarez-Alvarez  <mariano@gnome.org>

	* gtk/gtk-base.defs: Allow None for the string arguments 
	of gtk_rc_get_style_by_paths. (Fixes bug #411412)

2007-02-05  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: Post release version bump

=== 2.10.4 ===
2007-02-05  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: 
	
	2.10.4

2007-01-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtk/gtkcontainer.override: Fix a possible memory leak in
	gtk.Container.child_get() (Fixes bug #404076)

2007-01-31  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkcontainer.override (_wrap_gtk_container_class_list_child_properties): Undeprecate

2007-01-20  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gdk.override (_wrap_gdk_display_close): Force keeping of a
	reference to the display GObject even when we close() it.

	* tests/test_gdk.py (GdkTest.testDisplay): Johan's unit test with
	minor modifications.

	* gtk/gdk.override (_wrap_gdk_display_close): Override and make it
	aware that calling gdk_display_close unrefs the GdkDisplay.

2007-01-18  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gdk-base.defs: allow None

2007-01-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac:  Turn the option --disable-docs into --enable-docs.
	* docs/Makefile.am:  Treat --enable-docs like --enable-gtk-doc in
	gtk+, i.e. do not ever build docs unless requested, but always
	install them if they are found already built.

2006-12-21  Sebastien Bacher  <seb128@ubuntu.com>

	* codegen/Makefile.am: install createdefs.py, fix dsextras.py,