@@ -1,3 +1,11 @@
+2007-05-17  Tim Evans  <t.evans@aranz.com>
+
+	Reviewed by: Gustavo Carneiro.
+
+	* codegen/reversewrapper.py (DoubleReturn.write_conversion): Fix
+	copy-paste error, and also support the new API that allows parsing
+	of multiple return values.  Fixes Bug #439014.
+
 2007-05-07  Richard Hult  <richard@imendio.com>
 
 	* configure.in: Make --disable-docs actually work, OKed by Johan.
